--- a/sherlockProject.Rmd
+++ b/sherlockProject.Rmd
@@ -109,8 +109,8 @@ wordcloud(words = words_frequencies$word, freq = words_frequencies$n, min.freq =
 
 
 ```{r tf-idf, echo=FALSE, collapse=TRUE, warning=FALSE}
-novels_token_filtered <- novels_token %>%
-    filter(word != "holmes")
+#novels_token_filtered <- novels_token %>%
+#    filter(word != "holmes")
 novels_token_filtered %>%
     count(color,book, word, sort = TRUE) %>%
     bind_tf_idf(word, book, n) %>%
@@ -165,14 +165,23 @@ ggplot(td_gamma, aes(gamma, fill = as.factor(topic))) +
 
 
 ```{r most_used_bigrams, echo=FALSE,  include=FALSE, collapse=TRUE, warning=FALSE}
-novels_counts_bigram <- novels_raw %>%
-  unnest_tokens(bigram, text, token = "ngrams", n = 2) %>%
-  count(bigram, book, color, sort = TRUE) %>%
-  filter(n > 3) %>% #bigrams with at least 4 occurrences, in order to have lighter graphic
-  separate(bigram, c("word1", "word2"), sep = " ") %>%
+
+novels_bigram <- novels_raw %>%
+  unnest_tokens(bigram, text, token = "ngrams", n = 2)
+
+bigrams_separated <- novels_bigram %>%
+  separate(bigram, c("word1", "word2"), sep = " ")
+
+bigrams_filtered <- bigrams_separated %>%
   filter(!word1 %in% stop_words$word) %>%
-  filter(!word2 %in% stop_words$word)  %>%
-  na.omit() %>%
+  filter(!word2 %in% stop_words$word) 
+
+bigram_counts <- bigrams_filtered %>% 
+  count(word1, word2, sort = TRUE)%>%
+  na.omit()
+
+novels_counts_bigram <- bigram_counts %>%
+  filter(n > 3) %>% #bigrams with at least 4 occurrences, in order to have lighter graphic
   unite("bigram", word1, word2, sep = " ") 
 
 
@@ -256,7 +265,140 @@ ggraph(bigram_graph, layout = "fr") +
 ```
 ```{r sentiment analysis}
 
+overall_sentiment <- novels_token %>%
+  inner_join(get_sentiments("bing")) %>%
+  count( sentiment,book)
+
+plot <- ggplot(overall_sentiment, aes(as.character(book), n, fill=sentiment))
+plot <- plot + geom_bar(stat = "identity", position = 'dodge')+
+  ggtitle("Negative and positive sentiments for each book") +
+  xlab("Book") + ylab("No. of words")
+
+plot
+
+#Most common Positive and negative words
+
+sentiment_word_count <- novels_token %>%
+  inner_join(get_sentiments("bing")) %>%
+  count(word, sentiment)%>%
+  ungroup()
+
+
+sentiment_word_count %>%
+  group_by(sentiment) %>%
+  top_n(10) %>%
+  ungroup() %>%
+  mutate(word = reorder(word, n)) %>%
+  ggplot(aes(word, n, fill = sentiment)) +
+  geom_col(show.legend = FALSE) +
+  facet_wrap(~sentiment, scales = "free_y") +
+  labs(y = "Contribution to sentiment",
+       x = NULL) +
+  coord_flip()
+
+
+bigrams_separated %>%
+  filter(word1 == "not") %>%
+  count(word1, word2, sort = TRUE)
+
+AFINN <- get_sentiments("afinn")
+
+not_words <- bigrams_separated %>%
+  filter(word1 == "not") %>%
+  inner_join(AFINN, by = c(word2 = "word")) %>%
+  count(word2, value, sort = TRUE)
+
+
+not_words %>%
+  mutate(contribution = n * value) %>%
+  arrange(desc(abs(contribution))) %>%
+  head(20) %>%
+  mutate(word2 = reorder(word2, contribution)) %>%
+  ggplot(aes(n * value, word2, fill = n * value > 0)) +
+  geom_col(show.legend = FALSE) +
+  labs(x = "Sentiment value * number of occurrences",
+       y = "Words preceded by \"not\"")
+
+negated_words <- c("not", "without", "don't", "won't")
+
+
+novel_bigram_counts <- novels_bigram %>%
+  count(book, bigram, sort = TRUE) %>%
+  separate(bigram, c("word1", "word2"), sep = " ")
+
+novel_bigram_counts %>%
+  filter(word1 %in% negated_words) %>%
+  count(word1, word2, wt = n, sort = TRUE) %>%
+  inner_join(get_sentiments("afinn"), by = c(word2 = "word")) %>%
+  mutate(contribution = value * n) %>%
+  group_by(word1) %>%
+  slice_max(abs(contribution), n = 10) %>%
+  ungroup() %>%
+  mutate(word2 = reorder_within(word2, contribution, word1)) %>%
+  ggplot(aes(contribution, word2, fill = contribution > 0)) +
+  geom_col(show.legend = FALSE) +
+  facet_wrap(~ word1, scales = "free", nrow = 2) +
+  scale_y_reordered() +
+  labs(x = "Sentiment value * # of occurrences",
+       y = "Words preceded by a negation")
+
+
+negated_words <- bigrams_separated %>%
+  filter(word1 %in% negation_words) %>%
+  inner_join(AFINN, by = c(word2 = "word")) %>%
+  count(word1, word2, value, sort = TRUE)
+
+
+negated_words %>%
+  mutate(contribution = n * value,
+         word2 = reorder(paste(word2, word1, sep = "__"), contribution)) %>%
+  group_by(word1) %>%
+  slice_max(abs(contribution), n = 12, with_ties = FALSE) %>%
+  ggplot(aes(word2, contribution, fill = n * value > 0)) +
+  geom_col(show.legend = FALSE) +
+  facet_wrap(~ word1, scales = "free") +
+  scale_x_discrete(labels = function(x) gsub("__.+$", "", x)) +
+  xlab("Words preceded by negation term") +
+  ylab("Sentiment value * # of occurrences") +
+  coord_flip()
 
 ```
+``` {r}
 
+words_by_book <- novels_token %>%
+  count(book, word, sort = TRUE) %>%
+  ungroup()
+
+novels_cors <- words_by_book %>%
+  pairwise_cor(book, word, n, sort = TRUE)
+
+novels_sentiments <- words_by_book %>%
+  inner_join(get_sentiments("afinn"), by = "word") %>%
+  group_by(book) %>%
+  summarize(value = sum(value * n) / sum(n))
+
+novels_sentiments %>%
+  mutate(book = reorder(book, value)) %>%
+  ggplot(aes(value, book, fill = value > 0)) +
+  geom_col(show.legend = FALSE) +
+  labs(x = "Average sentiment value", y = NULL)
+
+
+top_sentiment_words <- words_by_book %>%
+  inner_join(get_sentiments("afinn"), by = "word") %>%
+  mutate(contribution = value * n / sum(n))
+
+top_sentiment_words %>%
+  group_by(book) %>%
+  slice_max(abs(contribution), n = 12) %>%
+  ungroup() %>%
+  mutate(book = reorder(book, contribution),
+         word = reorder_within(word, contribution, book)) %>%
+  ggplot(aes(contribution, word, fill = contribution > 0)) +
+  geom_col(show.legend = FALSE) +
+  scale_y_reordered() +
+  facet_wrap(~ book, scales = "free") +
+  labs(x = "Sentiment value contribution of each word in the book", y = NULL)
+
+```
 
