--- a/sherlockProject.Rmd
+++ b/sherlockProject.Rmd
@@ -24,6 +24,7 @@ library(igraph)
 library(tidygraph)
 library(ggraph)
 library(widyr)
+library(scales)
 devtools::install_github("analyxcompany/resolution")
 library(stm)
 library(forcats)
@@ -33,8 +34,10 @@ library(forcats)
 ## Introduction
 
 ```{r prepare novels, include=FALSE}
+set.seed(2022)
 #Loading dataset
-colors <- c("Red", "Blue", "Green", "Yellow")
+
+colors <- c("#003f5c", "#7a5195", "#ef5675", "#ffa600")
 houn <- read.delim("https://raw.githubusercontent.com/Pole97/Sherlock-Holmes-Stories-Analisys/main/novels/houn.txt", stringsAsFactors = FALSE, skip = 0, strip.white = TRUE) %>%
   rename(text = THE.HOUND.OF.THE.BASKERVILLES) %>%
   mutate(color = "blue") # THE HOUND OF THE BASKERVILLES
@@ -104,23 +107,23 @@ words_frequencies <- novels_token %>%
    count(word, sort = TRUE) 
 
 wordcloud(words = words_frequencies$word, freq = words_frequencies$n, min.freq = 60,
-          max.words = 70, random.order = FALSE, rot.per = 0.35, 
+          max.words = 70, random.order = FALSE, rot.per = 0.3, 
           colors=brewer.pal(8, "Dark2"))
 
 ```
 
 
-```{r tf-idf, echo=FALSE, collapse=TRUE, warning=FALSE}
-#novels_token_filtered <- novels_token %>%
-#    filter(word != "holmes")
-novels_token %>%
+```{r tf_idf_onegram, echo=FALSE, include=FALSE,collapse=TRUE, warning=FALSE}
+tf_idf_onegram <- novels_token %>%
     count(color,book, word, sort = TRUE) %>%
     bind_tf_idf(word, book, n) %>%
     group_by(book) %>%
     top_n(10) %>%
     ungroup %>%
-    mutate(word = reorder(word, tf_idf)) %>%
-    ggplot(aes(word, tf_idf, fill = book )) +
+    mutate(word = reorder(word, tf_idf))
+```
+```{r tf_idf_onegram_plot, echo=FALSE, collapse=TRUE, warning=FALSE}
+ggplot(tf_idf_onegram,aes(word, tf_idf, fill = book )) +
     geom_col(show.legend = FALSE) +
     facet_wrap(~ book, scales = "free") +
     scale_fill_manual(values = colors) +
@@ -128,48 +131,7 @@ novels_token %>%
 ```
 
 
-```{r topic modeling, echo=FALSE, collapse=TRUE, warning=FALSE}
-sherlock_dfm <- novels_token %>%
-    filter(word != "holmes") %>%
-    count(book, word, sort = TRUE) %>%
-    cast_dfm(book, word, n)
-
-topic_model <- stm(sherlock_dfm, K = 4
-                   , 
-                   verbose = FALSE, init.type = "Spectral")
-summary(topic_model)
-
-td_beta <- tidy(topic_model)
-
-td_beta %>%
-    group_by(topic) %>%
-    top_n(10, beta) %>%
-    ungroup() %>%
-    mutate(topic = paste0("Topic ", topic),
-           term = reorder_within(term, beta, topic)) %>%
-    ggplot(aes(term, beta, fill = as.factor(topic))) +
-    geom_col(alpha = 0.8, show.legend = FALSE) +
-    facet_wrap(~ topic, scales = "free_y") +
-    coord_flip() +
-    scale_x_reordered() +
-    labs(x = NULL, y = expression(beta),
-         title = "Highest word probabilities for each topic",
-         subtitle = "Different words are associated with different topics")
-
-
-td_gamma <- tidy(topic_model, matrix = "gamma",                    
-                 document_names = rownames(sherlock_dfm))
-
-ggplot(td_gamma, aes(gamma, fill = as.factor(topic))) +
-  geom_histogram(alpha = 0.8, show.legend = FALSE) +
-  facet_wrap(~ topic, ncol = 2) +
-  labs(title = "Distribution of document probabilities for each topic",
-       subtitle = "Each topic is associated with a story",
-       y = "Number of stories", x = expression(gamma))
-```
-
-
-```{r most_used_bigrams, echo=FALSE,  include=FALSE, collapse=TRUE, warning=FALSE}
+```{r most used bigrams, echo=FALSE, include=FALSE, collapse=TRUE, warning=FALSE}
 
 novels_bigram <- novels_raw %>%
   unnest_tokens(bigram, text, token = "ngrams", n = 2)
@@ -199,10 +161,10 @@ p <- novels_counts_bigram %>%
   theme(legend.position = "none") +
   labs(x = "Books in cronological order",
         y = "Occourrences of bigram") +
-  scale_color_manual(values = c("Red", "Blue", "Green", "Yellow")) +
+  scale_color_manual(values = colors) +
   geom_hline(yintercept = 10, label = "Top 10", alpha = .8, linetype ="longdash", color = "#D0CE7C") 
 ```
-```{r plot_bigrams, echo=FALSE, collapse=TRUE, warning=FALSE}
+```{r plot_bigrams, echo=FALSE,  collapse=TRUE, warning=FALSE}
 font = list(
   size = 15,
   color = "white"
@@ -223,8 +185,28 @@ ggplotly(p, tooltip = c("text")) %>%
 
 
 ```
+```{r bigram as a network, echo=FALSE, collapse=TRUE, warning=FALSE}
+bigram_graph  <- novels_counts_bigram %>%
+  filter(n>7) %>%
+  separate(bigram, c("word1", "word2"), sep = " ") %>%
+  select(word1, word2,n) %>%
+  graph_from_data_frame()
 
-```{r bigram as a network}
+#plot graph
+# Using the ggraph function(), we plot the most frequent bi-grams as a network, or “graph” .
+
+a <- grid::arrow(type = "closed", length = unit(1, "mm"))
+
+ggraph(bigram_graph, layout = "fr") +
+  geom_edge_link(aes(edge_alpha = n), show.legend = FALSE,
+                 arrow = a, end_cap = circle(0.5, "mm")) +
+  geom_node_point(color = "lightblue", size = 1) +
+  geom_node_text(aes(label = name), repel = TRUE) +
+  theme_void()
+
+```
+
+```{r tf-idf bigram, echo=FALSE, collapse=TRUE, warning=FALSE}
 
 book_tf_idf  <- novels_raw %>%
     unnest_tokens(bigram, text, token = "ngrams", n = 2) %>%
@@ -246,72 +228,54 @@ book_tf_idf %>%
   facet_wrap(~book, ncol = 2, scales = "free") +
   scale_fill_manual(values = colors) +
   labs(x = "tf-idf", y = NULL)
-
-bigram_graph  <- novels_counts_bigram %>%
-  filter(n>7) %>%
-  separate(bigram, c("word1", "word2"), sep = " ") %>%
-  select(word1, word2,n) %>%
-  graph_from_data_frame()
-
-#plot graph
-# Using the ggraph function(), we plot the most frequent bi-grams as a network, or “graph” .
-set.seed(2022)
-
-a <- grid::arrow(type = "closed", length = unit(1, "mm"))
-
-ggraph(bigram_graph, layout = "fr") +
-  geom_edge_link(aes(edge_alpha = n), show.legend = FALSE,
-                 arrow = a, end_cap = circle(0.5, "mm")) +
-  geom_node_point(color = "lightblue", size = 1) +
-  geom_node_text(aes(label = name), repel = TRUE) +
-  theme_void()
-
 ```
 
 
 
+#Sentiment analysis
 
 
-```{r sentiment analysis}
+```{r sentiment_general_analysis, echo=FALSE,include=FALSE, collapse=TRUE, warning=FALSE}
 
 overall_sentiment <- novels_token %>%
-  inner_join(get_sentiments("bing")) %>%
-  count( sentiment,book)
-
-plot <- ggplot(overall_sentiment, aes(as.character(book), n, fill=sentiment))
-plot <- plot + geom_bar(stat = "identity", position = 'dodge')+
-  ggtitle("Negative and positive sentiments for each book") +
-  xlab("Book") + ylab("No. of words")
-
-plot
+    inner_join(get_sentiments("bing")) %>%
+    count( sentiment,book)
 
 #Most common Positive and negative words
 
 sentiment_word_count <- novels_token %>%
-  inner_join(get_sentiments("bing")) %>%
-  count(word, sentiment)%>%
-  ungroup()
+    inner_join(get_sentiments("bing")) %>%
+    count(word, sentiment)%>%
+    ungroup()
 
 
-sentiment_word_count %>%
-  group_by(sentiment) %>%
-  top_n(10) %>%
-  ungroup() %>%
-  mutate(word = reorder(word, n)) %>%
-  ggplot(aes(word, n, fill = sentiment)) +
-  geom_col(show.legend = FALSE) +
-  facet_wrap(~sentiment, scales = "free_y") +
-  labs(y = "Contribution to sentiment",
-       x = NULL) +
-  coord_flip()
+plot_most_contribution <- sentiment_word_count %>%
+    group_by(sentiment) %>%
+    top_n(10) %>%
+    ungroup() %>%
+    mutate(word = reorder(word, n)) 
+
+```
+```{r sentiment_general_analysis_plot, echo=FALSE, collapse=TRUE, warning=FALSE}
+ggplot(overall_sentiment, aes(as.character(book), n, fill=sentiment)) +   
+    geom_bar(stat = "identity", position = 'dodge')+
+    ggtitle("Negative and positive sentiments for each book") +
+    xlab("Book") + ylab("No. of words")
 
 
-bigrams_separated %>%
-  filter(word1 == "not") %>%
-  count(word1, word2, sort = TRUE)
+ggplot(plot_most_contribution, aes(word, n, fill = sentiment)) +
+    geom_col(show.legend = FALSE) +
+    facet_wrap(~sentiment, scales = "free_y") +
+    labs(y = "Contribution to sentiment",
+         x = NULL) +
+    coord_flip()
+```
+
+
+
+```{r sentiment_false_friends, echo=FALSE, collapse=TRUE, warning=FALSE}
 
 AFINN <- get_sentiments("afinn")
-
 not_words <- bigrams_separated %>%
   filter(word1 == "not") %>%
   inner_join(AFINN, by = c(word2 = "word")) %>%
@@ -353,23 +317,11 @@ novel_bigram_counts %>%
 
 
 ```
-``` {r sentiment2}
+``` {r sentiment_contribution, echo=FALSE, collapse=TRUE, warning=FALSE}
 
 words_by_book <- novels_token %>%
   count(book, word, sort = TRUE) %>%
   ungroup()
-
-novels_sentiments <- words_by_book %>%
-  inner_join(get_sentiments("afinn"), by = "word") %>%
-  group_by(book) %>%
-  summarize(value = sum(value * n) / sum(n))
-
-novels_sentiments %>%
-  mutate(book = reorder(book, value)) %>%
-  ggplot(aes(value, book, fill = value > 0)) +
-  geom_col(show.legend = FALSE) +
-  labs(x = "Average sentiment value", y = NULL)
-
 
 top_sentiment_words <- words_by_book %>%
   inner_join(get_sentiments("afinn"), by = "word") %>%
@@ -390,7 +342,7 @@ top_sentiment_words %>%
 ```
 
 <p>Costruendo la matrice con gli indici di correlazione di Pearson relativi ad ogni coppia di storie, la maggior parte delle coppie mostrano una correlazione positiva debole, quindi vuol dire che, nonostante molti racconti siano di argomento simile, il lessico usato varia.Solo in un caso, tra <i>William Wilson</i> e <i>The Murders of the Rue Morgue</i>, si raggiunge lo 0,6.</p>
-```{r}
+```{r correlation with Pearson, echo=FALSE, collapse=TRUE, warning=FALSE}
 
 #non usiamo il set di parole completo, ma quello senza stop word
 frequency <- words_by_book %>%
@@ -400,34 +352,35 @@ frequency <- words_by_book %>%
   spread(book, proportion) 
 
 frequency_matrix <- cor(frequency[, c(-1)], use = "pairwise.complete.obs") 
-corrplot(frequency_matrix,method = "square")
+
+corrplot(frequency_matrix,method = 'circle', type = 'lower', insig='blank',
+         addCoef.col ='black', number.cex = 0.8, diag=FALSE, tl.cex = 0.9, tl.pos='ld',tl.srt=45, cl.cex = 0.6)
 
 
 ggplot(frequency, aes(x = `The Sign of the Four`, y = `A Study in Scarlet`)) +
-geom_abline(color = "gray40", lty = 2) +
-geom_text(aes(label = word), check_overlap = TRUE, vjust = 1.5) +
-scale_x_log10(labels = percent_format()) +
-scale_y_log10(labels = percent_format()) +
-labs(y = "A Study in Scarlet", x = "The Sign of the Four") +
-theme_light()
+  geom_abline(color = "gray40", lty = 2) +
+  geom_text(aes(label = word), check_overlap = TRUE, vjust = 1.5) +
+  scale_x_log10(labels = percent_format()) +
+  scale_y_log10(labels = percent_format()) +
+  labs(y = "A Study in Scarlet", x = "The Sign of the Four") +
+  theme_light()
 
 ggplot(frequency, aes(x = `The Valley of Fear`, y = `The Hound of the Baskervilles`)) +
-geom_abline(color = "gray40", lty = 2) +
-geom_text(aes(label = word), check_overlap = TRUE, vjust = 1.5) +
-scale_x_log10(labels = percent_format()) +
-scale_y_log10(labels = percent_format()) +
-labs(y = "The Valley of Fear", x = "The Hound of the Baskervilles") +
-theme_light()
+  geom_abline(color = "gray40", lty = 2) +
+  geom_text(aes(label = word), check_overlap = TRUE, vjust = 1.5) +
+  scale_x_log10(labels = percent_format()) +
+  scale_y_log10(labels = percent_format()) +
+  labs(y = "The Valley of Fear", x = "The Hound of the Baskervilles") +
+  theme_light()
 
 ```
 
 #Examining Pairwise Correlation
-```{r}
+```{r pairwise_prepare, echo=FALSE, include=FALSE, collapse=TRUE, warning=FALSE}
 holmes_section_words <- novels_raw %>%
   mutate(section = row_number() %/% 10) %>%
   unnest_tokens(word, text) %>%
   filter(!word %in% stop_words$word)
-
 
 # we need to filter for at least relatively common words first
 word_cors <- holmes_section_words %>%
@@ -435,8 +388,10 @@ word_cors <- holmes_section_words %>%
   filter(n() >= 20) %>%
   pairwise_cor(word, section, sort = TRUE)
 
-word_cors %>%
-  filter(item1 %in% c("holmes", "house", "sir", "time")) %>%
+frequent_words <- c("holmes", "house", "sir", "time")
+
+top_corr_plot <- word_cors %>%
+  filter(item1 %in% frequent_words) %>%
   group_by(item1) %>%
   top_n(6) %>%
   ungroup() %>%
@@ -446,15 +401,62 @@ word_cors %>%
   facet_wrap(~ item1, scales = "free") +
   coord_flip()
 
-set.seed(2022)
+```
+```{r pairwise_most_occurred_words, echo=FALSE, collapse=TRUE, warning=FALSE}
+top_corr_plot
 
-word_cors %>%
+g<-word_cors %>%
   filter(correlation > .3) %>%
   graph_from_data_frame() %>%
-  ggraph(layout = "fr") +
-  geom_edge_link(aes(edge_alpha = correlation), show.legend = FALSE) +
-  geom_node_point(color = "lightblue", size = 2) +
+  ggraph(layout = "fr") 
+
+
+mcolor <- g$data %>% mutate(mcolor = if_else(name %in% frequent_words, 
+                                     "red", "lightblue")) %>% select(mcolor)
+
+g + geom_edge_link(aes(edge_alpha = correlation), show.legend = FALSE) +
+  geom_node_point(colour=mcolor$mcolor, size = 2) +
   geom_node_text(aes(label = name), repel = TRUE) +
   theme_void()
 
+```
+
+
+#Topic modeling
+```{r topic modeling, echo=FALSE, collapse=TRUE, warning=FALSE}
+sherlock_dfm <- novels_token %>%
+    filter(word != "holmes") %>%
+    count(book, word, sort = TRUE) %>%
+    cast_dfm(book, word, n)
+
+topic_model <- stm(sherlock_dfm, K = 2, 
+                   verbose = FALSE, init.type = "Spectral")
+#summary(topic_model)
+
+td_beta <- tidy(topic_model)
+
+td_beta %>%
+    group_by(topic) %>%
+    top_n(10, beta) %>%
+    ungroup() %>%
+    mutate(topic = paste0("Topic ", topic),
+           term = reorder_within(term, beta, topic)) %>%
+    ggplot(aes(term, beta, fill = as.factor(topic))) +
+    geom_col(alpha = 0.8, show.legend = FALSE) +
+    facet_wrap(~ topic, scales = "free_y") +
+    coord_flip() +
+    scale_x_reordered() +
+    labs(x = NULL, y = expression(beta),
+         title = "Highest word probabilities for each topic",
+         subtitle = "Different words are associated with different topics")
+
+
+td_gamma <- tidy(topic_model, matrix = "gamma",                    
+                 document_names = rownames(sherlock_dfm))
+
+ggplot(td_gamma, aes(gamma, fill = as.factor(topic))) +
+  geom_histogram(alpha = 0.8, show.legend = FALSE,bins=30) +
+  facet_wrap(~ topic, ncol = 2) +
+  labs(title = "Distribution of document probabilities for each topic",
+       y = "Number of stories", x = expression(gamma))
 ```
